# Counterfactual-Fragility-Certificates

./: ANONYMIZATION_CHECKLIST.md  ARTIFACT_CARD.md  README.md  pyproject.toml
cfc_anonymous_review_artifact/: CITATION.cff  FULL_RELEASE_PLAN.md  LICENSE  requirements.txt
cfc_anonymous_review_artifact/assets/figures/: README.md
cfc_anonymous_review_artifact/data/precomputed/: component_ablation_curated.csv  greedy_exact_beam.csv  naturalistic_proxy.csv  score_comparison.csv
cfc_anonymous_review_artifact/docs/: index.html
cfc_anonymous_review_artifact/results/tables/: tables.md
cfc_anonymous_review_artifact/scripts/: quick_demo.py  reproduce_tables.py
cfc_anonymous_review_artifact/src/cfc_ref/: __init__.py  protocol.py
cfc_anonymous_review_artifact/tests/: test_certificate.py
data/precomputed/: attribution_baselines.csv  design_stability_curated.csv
paper_snippets/: cfc_core_equations.tex
results/: demo_certificate.json
scripts/: make_figures.py
src/cfc_ref/: certificate.py
