[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfc-review-artifact"
version = "0.1.0"
description = "Anonymous review artifact for Counterfactual Fragility Certificates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "pandas>=2.1", "matplotlib>=3.8", "tabulate>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]
